[feat] 학습하기 화면 구현 완료

--- a/style2.css
+++ b/style2.css
@@ -5,6 +5,10 @@ body {
     z-index: 1;
 }
 
+.main-title {
+    margin-bottom: 20px;
+}
+
 body::before {
     content: '';
     position: absolute;
